apps/homer-dashboard/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: homer
  namespace: homer
  annotations:
    item.homer.rajsingh.info/name: "Homer"
    item.homer.rajsingh.info/subtitle: "Services Dashboard"
    item.homer.rajsingh.info/logo: "https://cdn.jsdelivr.net/gh/homarr-labs/dashboard-icons/webp/homer.webp"
    service.homer.rajsingh.info/name: "Observability"
    service.homer.rajsingh.info/icon: "fas fa-eye"

spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "homer.prosto.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: main-homer
          port: 80
